cloud-gateway/k8s/kustomize/base/gateway.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  labels:
    app: "cloud-gateway"
    version: "1.0-SNAPSHOT"
    group: "hal"
  name: "cloud-gateway"
spec:
  ports:
  - name: "http"
    port: 8070
    targetPort: 8070
  selector:
    app: "cloud-gateway"
    version: "1.0-SNAPSHOT"
    group: "hal"
  type: "NodePort"
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  labels:
    app: "cloud-gateway"
    version: "1.0-SNAPSHOT"
    group: "hal"
  name: "cloud-gateway"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "cloud-gateway"
      version: "1.0-SNAPSHOT"
      group: "hal"
  template:
    metadata:
      labels:
        app: "cloud-gateway"
        version: "1.0-SNAPSHOT"
        group: "hal"
    spec:
      containers:
      - env:
        - name: "KUBERNETES_NAMESPACE"
          valueFrom:
            fieldRef:
              fieldPath: "metadata.namespace"
        image: "jackbeaken/cloud-gateway:latest"
        imagePullPolicy: "IfNotPresent"
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: "/actuator/info"
            port: 8070
            scheme: "HTTP"
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: "cloud-gateway"
        ports:
        - containerPort: 8070
          name: "http"
          protocol: "TCP"
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: "/actuator/health"
            port: 8070
            scheme: "HTTP"
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
      serviceAccount: "cloud-gateway"
