cloud-gateway/k8s/kustomize/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace : default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: staging-gtw.elsapi-np.elsst.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gateway
          servicePort: 8080
